--- a/Visualforce/src/components/JqmRecordDml.component
+++ b/Visualforce/src/components/JqmRecordDml.component
@@ -1,45 +1,20 @@
 <apex:component controller="JqmRecordDmlController" layout="none">
     <apex:attribute name="operation" type="String" required="true" default="" description="The type of DML operation. [insert|update|delete]" assignTo="{!config.operation}"/>
     <apex:attribute name="sobjectType" type="String" required="true" default="" description="The API name of the Sobject on which to operate. e.g. Lead, MyObject__c" assignTo="{!config.sobjectType}"/>
+    <apex:attribute name="jsCtlrName" type="String" assignTo="{!config.jsCtlrName}" default="$V.JqmRecordDmlComponent" description="Custom Javascript handler to manage client-side lifecycle and behavior."/>
+    <apex:attribute name="debug" type="Boolean" assignTo="{!config.debug}" default="false" description=""/>
+    
+    <!-- VF/HTML -->
+    <apex:includeScript value="{!URLFOR($Resource[JqmRecordDmlComponentJS])}"/>
 
-    <form id="jqmForm" data-ajax="false" onSubmit="onJqmFormSubmit(this); return false;">
+    <form id="jqmForm" data-ajax="false" onSubmit="/*Event attached by JS controller.*/">
         <p id="formResults"></p>
+        <input id="sobjectType" name="sobjectType" value="{!sobjectType}" type="hidden"/>
         <apex:componentBody />
     </form>
     
-	<script>
-	    //TODO: Define this on $V to keep clutter out of global namespace.
-        function onJqmFormSubmit(that) {
-            $.mobile.showPageLoadingMsg("b", "Calculating...", false);
-            
-            //Gather all form inputs with JavaScript into a form values map.
-            var formFieldNameToValueMap = {};
-            formFieldNameToValueMap['sobjectType'] = '{!sobjectType}';
-            $(that).find('input').each(function() {
-                if ($(this).attr('name') !== 'submit')
-                    formFieldNameToValueMap[$(this).attr('name')] = $(this).attr('value');
-            });
-            $V.App.log.debug("Sending these fields to server handler: ", formFieldNameToValueMap);
-            //$.mobile.hidePageLoadingMsg();
-            
-            //Send the form values map to the server handler.
-            //TODO: Turn this specific method call a generic method call.
-            JqmRecordDmlController.performOperation(formFieldNameToValueMap, function(result, event) {
-                $V.App.log.debug("Event: ", event);
-                $V.App.log.debug("Result: ", result);
-                if (event.status === false) {//Failure
-                    $("#formResults").html(event.message);
-                }
-                else {//Success
-                    //TODO: Do success stuff here.
-                    $("#formResults").html('Record created: ' + result.Id);
-                }
-                
-                $.mobile.hidePageLoadingMsg();
-                return false;
-            });
-        }
-    </script>
+    <script>$V.App.registerComponent('jqmForm', {!configAsJson});</script>
+    
     <style>
         p#formResults {
             color: white;
